# wechy

./: .gitignore  README.md  README_STREAMLIT.md  TECHNICAL_NOTES.md  TUI_ARCHITECTURE.md  WEBHOST_SUPPORT_EVALUATION.md  demo_audit.py  pyproject.toml  requirements.txt  requirements_tui.txt  setup.py  setup_streamlit.sh  streamlit_config.toml  streamlit_web_audit.py  tui_app.py  tui_app_run.py
.agents/skills/skill_management/: SKILL.md
.agents/skills/web_auditing/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
.streamlit/: config.toml
agents/: __init__.py  audit_agent.py  base_agent.py  llm_client.py  prompts.py  report_agent.py
config/: __init__.py  dns_servers.py  settings.py
models/: __init__.py  audit_result.py
monolitic_old/: auditweb.sh  streamlit_web_audit.py
skills/: __init__.py  base_skill.py  dns_skill.py  performance_skill.py  security_skill.py  skill_registry.py  ssl_skill.py  tech_detection_skill.py  whois_skill.py
skills/tui_refactor/: SKILL.md
tui_app/: __init__.py  main.py
tui_app/ui/: __init__.py  dashboard.py
ui/: __init__.py  app.py  components.py
